# mailgw-rust

./: Cargo.toml
examples/: simple_loop.rs
src/: lib.rs
