[package]
name = "mailgw"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11.10", features = ["json"] }
lazy_static = "1.0.0"
thiserror = "1.0"
